--- a/backend/package.json
+++ b/backend/package.json
@@ -31,5 +31,10 @@
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-config-prettier": "^3.3.0"
   }
 }
