--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
+    "debug": "nodemon -e js,graphql -x node --inspect src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "playground": "graphql playground",
     "test": "jest",
     "deploy": "prisma deploy"
   },
