--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "debug": "nodemon -e js,graphql -x node --inspect src/index.js",
-    "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "dev": "npm-run-all --parallel debug playground",
     "playground": "graphql playground",
     "test": "jest",
     "deploy": "prisma deploy"
